feat: funcion generica para crear tablas en consola con titulo